project/stage/parse_tests/tests/reject/bad_programs/junk_between_funcs.ul
void main() {
    ;
}

junk 1123

boolean f() {

}
